[project]
name = "luolasto_gen"
version = "0.1.0"
description = ""
authors = [

]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
]

[dependency-groups]
dev = [
	"pytest (>=8.4.2,<9.0.0)",
	"coverage (>=7.11.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-systems]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
